# CoreEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DEPENDENCIES.md  ENGINE_SOURCE_OF_TRUTH.md  MILESTONES.md
include/Engine/Asset/: AssetRegistry.hpp
include/Engine/Core/: Assert.hpp  Clock.hpp  CommandLine.hpp  Engine.hpp  FileSystem.hpp  Handle.hpp  JobSystem.hpp  Logger.hpp  Version.hpp
include/Engine/Math/: LinearAlgebra.hpp
include/Engine/Platform/: Win32Window.hpp
include/Engine/RHI/: BackendFactory.hpp  CommandList.hpp  Device.hpp  Pipeline.hpp  RendererBackend.hpp  Resource.hpp
include/Engine/RHI/DX12/: DX12SandboxRenderer.hpp  DX12TriangleRenderer.hpp
include/Engine/RHI/Vulkan/: VulkanSandboxRenderer.hpp  VulkanTriangleRenderer.hpp
include/Engine/Renderer/: Camera.hpp  FrameGraph.hpp  SandboxFrameRenderer.hpp  SandboxMesh.hpp
include/Engine/Scene/: Components.hpp  Scene.hpp
include/Engine/Tools/: RuntimeDebugOverlay.hpp
shaders/: Mesh.slang  Triangle.slang  Triangle.vert.glsl
src/Engine/Asset/: AssetRegistry.cpp
src/Engine/Core/: Assert.cpp  Clock.cpp  CommandLine.cpp  Engine.cpp  FileSystem.cpp  JobSystem.cpp  Logger.cpp  Version.cpp
src/Engine/Math/: LinearAlgebra.cpp
src/Engine/Platform/: Win32Window.cpp
src/Engine/RHI/: BackendFactory.cpp  CommandList.cpp  Pipeline.cpp  RendererBackend.cpp  Resource.cpp
src/Engine/RHI/DX12/: DX12SandboxRenderer.cpp  DX12TriangleRenderer.cpp
src/Engine/RHI/Vulkan/: VulkanSandboxRenderer.cpp  VulkanTriangleRenderer.cpp
src/Engine/Renderer/: Camera.cpp  FrameGraph.cpp  SandboxFrameRenderer.cpp  SandboxMesh.cpp
src/Engine/Scene/: Scene.cpp
src/Engine/Tools/: RuntimeDebugOverlay.cpp
src/Sandbox/: Main.cpp
tests/: README.md
tests/harness/: TestHarness.cpp  TestHarness.hpp
tests/integration/: EngineBootstrapTests.cpp  RhiGpuSmokeTests.cpp
tests/unit/: AssetPipelineTests.cpp  CoreSystemsTests.cpp  CoreVersionTests.cpp  FrameGraphTests.cpp  MathCameraTests.cpp  RhiContractTests.cpp  SceneEcsTests.cpp
